--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,34 +1,14 @@
 // bower:scss
+@import "bower_components/susy/sass/_susy.scss";
 // endbower
+
+$susy: (
+  columns: 12,
+  container: 1120px,
+  gutters: 0.25,
+  global-box-sizing: border-box
+);
+@include border-box-sizing;
 
 @import 'cantina/cantina';
 @import 'style-guide';
-
-// body {
-//   background: #fafafa;
-//   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-//   color: #333;
-// }
-
-// .hero-unit {
-//   margin: 50px auto 0 auto;
-//   width: 300px;
-//   font-size: 18px;
-//   font-weight: 200;
-//   line-height: 30px;
-//   background-color: #eee;
-//   border-radius: 6px;
-//   padding: 60px;
-//   h1 {
-//     font-size: 60px;
-//     line-height: 1;
-//     letter-spacing: -1px;
-//   }
-// }
-
-// .browserupgrade {
-//   margin: 0.2em 0;
-//   background: #ccc;
-//   color: #000;
-//   padding: 0.2em 0;
-// }
