--- a/app/styles/style-guide.scss
+++ b/app/styles/style-guide.scss
@@ -96,3 +96,26 @@ h2.section-title {
   border-top: 1px dotted $grey-6;
   border-bottom: 1px dotted $grey-5;
 }
+
+/**
+ * Code Previews
+ */
+
+.style-code {
+  display: none;
+  margin: 0 $style-side-margins;
+}
+
+.style-code-toggle {
+  float: right;
+  padding: 0.25em;
+
+  background: $grey-7;
+  border-radius: 0.25em;
+  color: white;
+  text-decoration: none;
+
+  &:hover {
+    background: $black;
+  }
+}
