--- a/app/styles/style-guide.scss
+++ b/app/styles/style-guide.scss
@@ -31,6 +31,7 @@ h2.section-title {
   // border-top: 4px solid transparent;
   border-bottom: 0.25em solid $grey-4;
   color: white;
+  font-size: $beta;
   text-align: center;
 }
 
