--- a/app/styles/style-guide.scss
+++ b/app/styles/style-guide.scss
@@ -19,6 +19,18 @@ html, body {
 }
 
 /**
+ * Header
+ */
+header {
+  padding: 0.5em 0;
+  text-align: center;
+
+  h1 {
+    margin: 0;
+  }
+}
+
+/**
  * Section Titles
  */
 
