Style color swatches

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -30,3 +30,9 @@ $xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max
 
 $xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})" !default;
 $xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})" !default;
+
+/**
+ * Etc
+ */
+
+$border-radius-sm: 0.125em;
