--- a/app/styles/cantina/_variables.scss
+++ b/app/styles/cantina/_variables.scss
@@ -34,3 +34,18 @@ $delta: $delta-px;
 $epsilon: $epsilon-px;
 $zeta: $zeta-px;
 $eta: $eta-px;
+
+/**
+ * Font Families
+ */
+
+$font-body: "Lato", "Helvetica Neue", Arial, sans-serif;
+$font-heading: "BigNoodleTitling", "Helvetica Neue", Arial, sans-serif;
+
+/**
+ * Font Weights
+ */
+
+$weight-regular: 500;
+$weight-light: 300;
+$weight-bold: 700;
