--- a/styles/modules/_forms.scss
+++ b/styles/modules/_forms.scss
@@ -156,4 +156,16 @@ input[type="checkbox"] {
     &:hover{
         background-color: $orange-mid;
     }
+
+    &.button-link{
+        padding: 0;
+        margin: 0;
+        background-color: transparent;
+        color: inherit;
+        text-transform: none;
+
+        &:hover{
+            text-decoration: underline;
+        }
+    }
 }
