--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,3 @@
-@import 'functions';
-
 $text-color: $grey-dark;
 $site-wrapper-max-width: 65rem;
 $site-sm-wrapper-max-width: 45rem;
@@ -29,6 +27,7 @@ $eta: 0.75rem;
 $font-body: "Lato", "Helvetica", "Arial", sans-serif;
 $font-heading: "BigNoodleTitling", "Helvetica", Arial, sans-serif;
 $font-heading-oblique: "BigNoodleTitling-Oblique", "Helvetica", Arial, sans-serif;
+$font-symbol: "Helvetica", "Arial", sans-serif;
 
 /**
  * Font Weights
