--- a/styles/modules/_blog-post.scss
+++ b/styles/modules/_blog-post.scss
@@ -1,4 +1,23 @@
-.page-details .author,
-.page-details .date {
-    text-transform: uppercase;
+.page-details {
+
+    margin: 0 0 4em 0;
+    position: relative;
+    overflow: auto;
+
+    .avatar {
+        float: left;
+        margin: 0 1em 0 0;
+        border-radius: 50%;
+    }
+
+    .author {
+        margin: 1em 0 0 0;
+    }
+
+    .author,
+    .date {
+        display: block;
+        text-transform: uppercase;
+    }
+
 }
