--- a/styles/modules/_tables.scss
+++ b/styles/modules/_tables.scss
@@ -3,9 +3,9 @@
 }
 table {
     width: 100%;
-    border-spacing: 0;
-    border-collapse: collapse;
+    cell-padding: none;
 
+    tr {}
     td, th {
         padding: 0.25em 0.5em;
         text-align: left;
