--- a/styles/modules/_thumbnail-item.scss
+++ b/styles/modules/_thumbnail-item.scss
@@ -1,4 +1,26 @@
-.thumbnail-item {
+.thumbnail-image {
+
+    background-color: $grey-dark;
+    background-position: 50% 50%;
+    background-size: cover;
+    padding-top: 50%;
+
+    @include animation('bg-pulse 3s ease');
+    animation-iteration-count: infinite;
+
+    @include keyframes(bg-pulse) {
+        33% { background-color: $grey-mid; }
+        66% { background-color: $grey-dark; }
+    }
+
+    @media screen and (min-width: 35em) {
+        padding-top: 100%;
+    }
+
+}
+
+.thumbnail-item,
+.thumbnail-item-horizontal {
 
     padding: 1em 0;
     width: 100%;
@@ -35,32 +57,6 @@
 
     }
 
-    .thumbnail-image {
-
-        position: relative;
-        width: 100%;
-        padding-top: 50%;
-        background-color: $grey-dark;
-        overflow: hidden;
-
-        img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: auto;
-            width: 100%;
-        }
-
-        @media screen and (min-width: 35em) {
-            padding-top: 100%;
-            img {
-                height: 100%;
-                width: auto;
-            }
-        }
-
-    }
-
     .title {
         font-family: $font-body;
         margin: .5em 0;
@@ -71,21 +67,20 @@
     }
 
     .details {
+
         margin: .5em 0;
-        text-transform: uppercase;
+
         .datetime,
         .author,
-        .address {
-            margin: 0;
-            font-size: 0.8em;
-            line-height: 1.4em;
-        }
+        .address,
         .location {
             margin: 0;
             font-size: 0.7em;
             font-weight: 100;
             line-height: 1.4em;
+            text-transform: uppercase;
         }
+
     }
 
     .description {
@@ -108,35 +103,28 @@
         height: auto;
     }
 
+}
+
+.thumbnail-item-horizontal {
+
     @media screen and (min-width: 35em) {
 
-        padding: 1em .25em;
-        width: 50%;
+        @include prefix-value(display, flex);
 
-        &:nth-child(2n+1) {
-            clear: both;
-        }
-
-        svg {
-            width: 15vw;
-        }
-
+        .thumbnail {
+            width: 30%;
     }
 
-    @media screen and (min-width: 50em) {
-
-        width: 25%;
-
-        &:nth-child(2n+1) {
-            clear: none;
+        .details {
+            @include prefix(flex, 1);
         }
 
-        &:nth-child(4n+1) {
-            clear: both;
+        .details {
+            margin: 0;
+            padding: 0 1em;
+            .title {
+                margin-top: 0;
         }
-
-        svg {
-            width: auto;
         }
 
     }
@@ -148,8 +136,14 @@
     margin: 0 -.5em;
     @include clearfix();
 
-    .thumbnail-item {
+    .thumbnail-item,
+    .thumbnail-item-horizontal {
+
         float: left;
+
+    }
+
+    .thumbnail-item {
 
         @media screen and (min-width: 35em) {
 
@@ -183,15 +177,37 @@
             }
 
         }
+
+    }
+
+    .thumbnail-item-horizontal {
+
+        @media screen and (min-width: 35em) {
+
+            padding: 1em .5em;
+
+        }
+
+        @media screen and (min-width: 60em) {
+
+            width: 50%;
+
+        }
+
     }
 
     &.thumbnail-item-wrapper-large {
 
-        .thumbnail-item {
+        .thumbnail-item,
+        .thumbnail-item-horizontal {
 
             .title {
                 font-size: $delta;
             }
+
+        }
+
+        .thumbnail-item {
 
             @media screen and (min-width: 50em) {
 
